// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration should display data about the integration 1`] = `
<div
  class="full-width"
>
  <div
    class="pageContainer container-fluid"
  >
    <p>
      Add the details about the HTTP integration you want to add below. If you need help, you can check our
       
      <a
        href="https://docs.gorgias.com/data-and-http-integrations/http-integrations"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       
      or contact us.
    </p>
    <form
      class=""
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-name"
        >
          Integration name
        </label>
        <div
          class=""
        >
          <input
            class="field form-control"
            id="id-name"
            required=""
            type="text"
            value="foo"
          />
        </div>
      </div>
      <div
        class="InputField form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-description"
        >
          Description
        </label>
        <div
          class=""
        >
          <input
            class="field form-control"
            id="id-description"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="control-label"
        >
          Triggers
        </label>
        <p>
          <small
            class="form-text text-muted"
          >
            This HTTP integration will be executed when any of the events below happens.
          </small>
        </p>
        <div
          class="mb-2"
        >
          <label
            class="label label"
            for="http.triggers.ticket-created"
          >
            <input
              checked=""
              class="input"
              id="http.triggers.ticket-created"
              name="http.triggers.ticket-created"
              type="checkbox"
            />
            Ticket created
          </label>
        </div>
        <div
          class="mb-2"
        >
          <label
            class="label label"
            for="http.triggers.ticket-updated"
          >
            <input
              class="input"
              id="http.triggers.ticket-updated"
              name="http.triggers.ticket-updated"
              type="checkbox"
            />
            Ticket updated
          </label>
        </div>
        <div
          class="mb-2"
        >
          <label
            class="label label"
            for="http.triggers.ticket-message-created"
          >
            <input
              class="input"
              id="http.triggers.ticket-message-created"
              name="http.triggers.ticket-message-created"
              type="checkbox"
            />
            Ticket message created
          </label>
        </div>
      </div>
      <div
        class="InputField required form-group"
        color="danger"
      >
        <label
          class="control-label"
          for="id-http.url"
        >
          URL
        </label>
        <div
          class=""
        >
          <input
            class="field form-control-danger is-invalid form-control"
            id="id-http.url"
            pattern="$a"
            placeholder="https://company.com/api/customers?email={{ticket.customer.email}}"
            required=""
            title="Example: https://company.com/api"
            type="url"
            value="http://httpbin.org/post"
          />
          <div
            class="invalid-feedback"
          >
            Only https protocol is allowed
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          <div>
            You can use
             
            <code>
              {{ticket.customer.email}}
            </code>
             
            to pass the email of the ticket customer. See other
             
            <a
              href="https://docs.gorgias.com/macros/macro-variables"
              rel="noopener noreferrer"
              target="_blank"
            >
              variables
            </a>
            .
          </div>
        </small>
      </div>
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-http.method"
        >
          HTTP Method
        </label>
        <div
          class="select dropdown-toggle"
        >
          <select
            class="field form-control"
            id="id-http.method"
            required=""
          >
            <option
              value="GET"
            >
              GET
            </option>
            <option
              value="POST"
            >
              POST
            </option>
            <option
              value="PUT"
            >
              PUT
            </option>
            <option
              value="PATCH"
            >
              PATCH
            </option>
            <option
              value="DELETE"
            >
              DELETE
            </option>
          </select>
        </div>
      </div>
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-http.request_content_type"
        >
          Request content type
        </label>
        <div
          class="select dropdown-toggle"
        >
          <select
            class="field form-control"
            id="id-http.request_content_type"
            required=""
          >
            <option
              value="application/json"
            >
              application/json
            </option>
            <option
              value="application/x-www-form-urlencoded"
            >
              application/x-www-form-urlencoded
            </option>
          </select>
        </div>
      </div>
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-http.response_content_type"
        >
          Response content type
        </label>
        <div
          class="select dropdown-toggle"
        >
          <select
            class="field form-control"
            id="id-http.response_content_type"
            required=""
          >
            <option
              value="application/json"
            >
              application/json
            </option>
          </select>
        </div>
      </div>
      <div
        class="form-group"
      >
        <div>
          <label
            class="control-label"
          >
            Headers
          </label>
          <div
            class="mb-3 form-row row"
          >
            <div
              class="col-5"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-key"
                    placeholder="Key"
                    required=""
                    type="text"
                    value="Authorization"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex-grow col"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-value"
                    placeholder="Value"
                    required=""
                    type="text"
                    value="Bearer a57sd4as6d4"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-auto"
            >
              <button
                aria-disabled="false"
                class="wrapper float-right wrapper fill destructive medium"
                title="Remove header"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </div>
          <div
            class="mb-3 form-row row"
          >
            <div
              class="col-5"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-key"
                    placeholder="Key"
                    required=""
                    type="text"
                    value="Foo"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex-grow col"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-value"
                    placeholder="Value"
                    required=""
                    type="text"
                    value="bar"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-auto"
            >
              <button
                aria-disabled="false"
                class="wrapper float-right wrapper fill destructive medium"
                title="Remove header"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </div>
          <button
            aria-disabled="false"
            class="wrapper fill secondary small"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft small"
              >
                add
              </i>
              Add 
              header
            </span>
          </button>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="control-label"
        >
          Request Body (JSON)
          <i
            class="material-icons ml-2 text-muted"
            id="json-body-label"
          >
            info_outline
          </i>
        </label>
        <div
          class="mb-2"
        >
          <div
            style="display: inline-block; vertical-align: middle;"
          >
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle"
                  >
                    <span
                      class="label"
                      style="min-width: 10px; opacity: 1;"
                    >
                      JSON template
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                    <i
                      class="material-icons dropdownIcon"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      Send the entire ticket/message JSON
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            class="InputField form-group"
            color=""
          >
            <div
              class=""
            >
              <div
                class="form-group"
              >
                <div
                  class="controls"
                >
                  <textarea
                    class="form-control"
                    id="id-http.form"
                    rows="8"
                  >
                    {
    "foo": "bar",
    "baz": {
        "bazile": "bazar"
    }
}
                  </textarea>
                </div>
              </div>
            </div>
          </div>
          <small
            class="form-text text-muted"
          >
            See full list of variables
             
            <a
              href="https://docs.gorgias.com/macros/macro-variables"
              rel="noopener noreferrer"
              target="_blank"
            >
              here
            </a>
          </small>
        </div>
      </div>
      <div>
        <button
          aria-disabled="false"
          class="wrapper mr-2 fill primary medium"
          type="submit"
        >
          Save changes
        </button>
        <button
          aria-disabled="false"
          class="wrapper fill destructive medium"
          type="button"
        >
          Deactivate HTTP integration
        </button>
        <button
          aria-disabled="false"
          class="wrapper float-right fill destructive medium"
          id="confirm-8"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              delete
            </i>
            Delete HTTP integration
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Integration should display data with url-encoded format 1`] = `
<div
  class="full-width"
>
  <div
    class="pageContainer container-fluid"
  >
    <p>
      Add the details about the HTTP integration you want to add below. If you need help, you can check our
       
      <a
        href="https://docs.gorgias.com/data-and-http-integrations/http-integrations"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       
      or contact us.
    </p>
    <form
      class=""
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-name"
        >
          Integration name
        </label>
        <div
          class=""
        >
          <input
            class="field form-control"
            id="id-name"
            required=""
            type="text"
            value="foo"
          />
        </div>
      </div>
      <div
        class="InputField form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-description"
        >
          Description
        </label>
        <div
          class=""
        >
          <input
            class="field form-control"
            id="id-description"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="control-label"
        >
          Triggers
        </label>
        <p>
          <small
            class="form-text text-muted"
          >
            This HTTP integration will be executed when any of the events below happens.
          </small>
        </p>
        <div
          class="mb-2"
        >
          <label
            class="label label"
            for="http.triggers.ticket-created"
          >
            <input
              checked=""
              class="input"
              id="http.triggers.ticket-created"
              name="http.triggers.ticket-created"
              type="checkbox"
            />
            Ticket created
          </label>
        </div>
        <div
          class="mb-2"
        >
          <label
            class="label label"
            for="http.triggers.ticket-updated"
          >
            <input
              class="input"
              id="http.triggers.ticket-updated"
              name="http.triggers.ticket-updated"
              type="checkbox"
            />
            Ticket updated
          </label>
        </div>
        <div
          class="mb-2"
        >
          <label
            class="label label"
            for="http.triggers.ticket-message-created"
          >
            <input
              class="input"
              id="http.triggers.ticket-message-created"
              name="http.triggers.ticket-message-created"
              type="checkbox"
            />
            Ticket message created
          </label>
        </div>
      </div>
      <div
        class="InputField required form-group"
        color="danger"
      >
        <label
          class="control-label"
          for="id-http.url"
        >
          URL
        </label>
        <div
          class=""
        >
          <input
            class="field form-control-danger is-invalid form-control"
            id="id-http.url"
            pattern="$a"
            placeholder="https://company.com/api/customers?email={{ticket.customer.email}}"
            required=""
            title="Example: https://company.com/api"
            type="url"
            value="http://httpbin.org/post"
          />
          <div
            class="invalid-feedback"
          >
            Only https protocol is allowed
          </div>
        </div>
        <small
          class="form-text text-muted"
        >
          <div>
            You can use
             
            <code>
              {{ticket.customer.email}}
            </code>
             
            to pass the email of the ticket customer. See other
             
            <a
              href="https://docs.gorgias.com/macros/macro-variables"
              rel="noopener noreferrer"
              target="_blank"
            >
              variables
            </a>
            .
          </div>
        </small>
      </div>
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-http.method"
        >
          HTTP Method
        </label>
        <div
          class="select dropdown-toggle"
        >
          <select
            class="field form-control"
            id="id-http.method"
            required=""
          >
            <option
              value="GET"
            >
              GET
            </option>
            <option
              value="POST"
            >
              POST
            </option>
            <option
              value="PUT"
            >
              PUT
            </option>
            <option
              value="PATCH"
            >
              PATCH
            </option>
            <option
              value="DELETE"
            >
              DELETE
            </option>
          </select>
        </div>
      </div>
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-http.request_content_type"
        >
          Request content type
        </label>
        <div
          class="select dropdown-toggle"
        >
          <select
            class="field form-control"
            id="id-http.request_content_type"
            required=""
          >
            <option
              value="application/json"
            >
              application/json
            </option>
            <option
              value="application/x-www-form-urlencoded"
            >
              application/x-www-form-urlencoded
            </option>
          </select>
        </div>
      </div>
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-http.response_content_type"
        >
          Response content type
        </label>
        <div
          class="select dropdown-toggle"
        >
          <select
            class="field form-control"
            id="id-http.response_content_type"
            required=""
          >
            <option
              value="application/json"
            >
              application/json
            </option>
          </select>
        </div>
      </div>
      <div
        class="form-group"
      >
        <div>
          <label
            class="control-label"
          >
            Headers
          </label>
          <div
            class="mb-3 form-row row"
          >
            <div
              class="col-5"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-key"
                    placeholder="Key"
                    required=""
                    type="text"
                    value="Authorization"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex-grow col"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-value"
                    placeholder="Value"
                    required=""
                    type="text"
                    value="Bearer a57sd4as6d4"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-auto"
            >
              <button
                aria-disabled="false"
                class="wrapper float-right wrapper fill destructive medium"
                title="Remove header"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </div>
          <div
            class="mb-3 form-row row"
          >
            <div
              class="col-5"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-key"
                    placeholder="Key"
                    required=""
                    type="text"
                    value="Foo"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex-grow col"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-value"
                    placeholder="Value"
                    required=""
                    type="text"
                    value="bar"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-auto"
            >
              <button
                aria-disabled="false"
                class="wrapper float-right wrapper fill destructive medium"
                title="Remove header"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </div>
          <button
            aria-disabled="false"
            class="wrapper fill secondary small"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft small"
              >
                add
              </i>
              Add 
              header
            </span>
          </button>
        </div>
      </div>
      <div
        class="form-group"
      >
        <div>
          <label
            class="control-label"
          >
            Form fields
          </label>
          <div
            class="mb-3 form-row row"
          >
            <div
              class="col-5"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-key"
                    placeholder="Key"
                    required=""
                    type="text"
                    value="foo"
                  />
                  
                </div>
              </div>
            </div>
            <div
              class="flex-grow col"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-value"
                    placeholder="Value"
                    required=""
                    type="text"
                    value="bar"
                  />
                  
                </div>
              </div>
            </div>
            <div
              class="col-auto"
            >
              <button
                aria-disabled="false"
                class="wrapper float-right wrapper fill destructive medium"
                title="Remove field"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </div>
          <div
            class="mb-3 form-row row"
          >
            <div
              class="col-5"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-key"
                    placeholder="Key"
                    required=""
                    type="text"
                    value="baz"
                  />
                  
                </div>
              </div>
            </div>
            <div
              class="flex-grow col"
            >
              <div
                class="InputField required form-group"
                color=""
              >
                <div
                  class=""
                >
                  <input
                    class="field form-control"
                    id="id-value"
                    placeholder="Value"
                    required=""
                    type="text"
                    value="[object Object]"
                  />
                  
                </div>
              </div>
            </div>
            <div
              class="col-auto"
            >
              <button
                aria-disabled="false"
                class="wrapper float-right wrapper fill destructive medium"
                title="Remove field"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </div>
          <button
            aria-disabled="false"
            class="wrapper fill secondary small"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft small"
              >
                add
              </i>
              Add 
              field
            </span>
          </button>
        </div>
      </div>
      <div>
        <button
          aria-disabled="false"
          class="wrapper mr-2 fill primary medium"
          type="submit"
        >
          Save changes
        </button>
        <button
          aria-disabled="false"
          class="wrapper fill destructive medium"
          type="button"
        >
          Deactivate HTTP integration
        </button>
        <button
          aria-disabled="false"
          class="wrapper float-right fill destructive medium"
          id="confirm-12"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              delete
            </i>
            Delete HTTP integration
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Integration should display default values because there is no integration (creation) 1`] = `
<div
  class="full-width"
>
  <div
    class="pageContainer container-fluid"
  >
    <p>
      Add the details about the HTTP integration you want to add below. If you need help, you can check our
       
      <a
        href="https://docs.gorgias.com/data-and-http-integrations/http-integrations"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       
      or contact us.
    </p>
    <form
      class=""
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-name"
        >
          Integration name
        </label>
        <div
          class=""
        >
          <input
            class="field form-control"
            id="id-name"
            required=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="InputField form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-description"
        >
          Description
        </label>
        <div
          class=""
        >
          <input
            class="field form-control"
            id="id-description"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="control-label"
        >
          Triggers
        </label>
        <p>
          <small
            class="form-text text-muted"
          >
            This HTTP integration will be executed when any of the events below happens.
          </small>
        </p>
        <div
          class="mb-2"
        >
          <label
            class="label label"
            for="http.triggers.ticket-created"
          >
            <input
              checked=""
              class="input"
              id="http.triggers.ticket-created"
              name="http.triggers.ticket-created"
              type="checkbox"
            />
            Ticket created
          </label>
        </div>
        <div
          class="mb-2"
        >
          <label
            class="label label"
            for="http.triggers.ticket-updated"
          >
            <input
              checked=""
              class="input"
              id="http.triggers.ticket-updated"
              name="http.triggers.ticket-updated"
              type="checkbox"
            />
            Ticket updated
          </label>
        </div>
        <div
          class="mb-2"
        >
          <label
            class="label label"
            for="http.triggers.ticket-message-created"
          >
            <input
              checked=""
              class="input"
              id="http.triggers.ticket-message-created"
              name="http.triggers.ticket-message-created"
              type="checkbox"
            />
            Ticket message created
          </label>
        </div>
      </div>
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-http.url"
        >
          URL
        </label>
        <div
          class=""
        >
          <input
            class="field form-control"
            id="id-http.url"
            pattern="*"
            placeholder="https://company.com/api/customers?email={{ticket.customer.email}}"
            required=""
            title="Example: https://company.com/api"
            type="url"
            value=""
          />
        </div>
        <small
          class="form-text text-muted"
        >
          <div>
            You can use
             
            <code>
              {{ticket.customer.email}}
            </code>
             
            to pass the email of the ticket customer. See other
             
            <a
              href="https://docs.gorgias.com/macros/macro-variables"
              rel="noopener noreferrer"
              target="_blank"
            >
              variables
            </a>
            .
          </div>
        </small>
      </div>
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-http.method"
        >
          HTTP Method
        </label>
        <div
          class="select dropdown-toggle"
        >
          <select
            class="field form-control"
            id="id-http.method"
            required=""
          >
            <option
              value="GET"
            >
              GET
            </option>
            <option
              value="POST"
            >
              POST
            </option>
            <option
              value="PUT"
            >
              PUT
            </option>
            <option
              value="PATCH"
            >
              PATCH
            </option>
            <option
              value="DELETE"
            >
              DELETE
            </option>
          </select>
        </div>
      </div>
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-http.response_content_type"
        >
          Response content type
        </label>
        <div
          class="select dropdown-toggle"
        >
          <select
            class="field form-control"
            id="id-http.response_content_type"
            required=""
          >
            <option
              value="application/json"
            >
              application/json
            </option>
          </select>
        </div>
      </div>
      <div
        class="form-group"
      >
        <div>
          <label
            class="control-label"
          >
            Headers
          </label>
          <p>
            No header
          </p>
          <button
            aria-disabled="false"
            class="wrapper fill secondary small"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft small"
              >
                add
              </i>
              Add 
              header
            </span>
          </button>
        </div>
      </div>
      <div>
        <button
          aria-disabled="false"
          class="wrapper mr-2 fill primary medium"
          type="submit"
        >
          Add integration
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Integration should display loading state because the integration is loading 1`] = `
<div
  class="container"
>
  <div
    class="inner"
    style="min-height: 500px;"
  >
    <i
      class="icon-custom icon-circle-o-notch md-spin"
      style="font-size: 40px;"
    />
  </div>
</div>
`;

exports[`Integration should display minimal information because integration is incomplete 1`] = `
<div
  class="full-width"
>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="alert warning mb-4"
    >
      <div
        class="iconContainer"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <div
        class="content"
      >
        <span
          class="label"
        >
          The settings for this HTTP integration are incomplete and it might not be working as expected. Edition mode has been disabled.
        </span>
      </div>
    </div>
    <form
      class=""
    >
      <div
        class="InputField required form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-name"
        >
          Integration name
        </label>
        <div
          class=""
        >
          <input
            class="field form-control"
            disabled=""
            id="id-name"
            required=""
            type="text"
            value="foo"
          />
        </div>
      </div>
      <div
        class="InputField form-group"
        color=""
      >
        <label
          class="control-label"
          for="id-description"
        >
          Description
        </label>
        <div
          class=""
        >
          <input
            class="field form-control"
            disabled=""
            id="id-description"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <button
          aria-disabled="false"
          class="wrapper float-right fill destructive medium"
          id="confirm-4"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              delete
            </i>
            Delete HTTP integration
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
